--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       context: .
       dockerfile: Dockerfile.dev
     volumes:
-      - /app/node_modelues
+      - /app/node_modules
       - .:/app
     command: ["npm", "run", "test"]
 
